--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div id="container"></div>
   <div class="loading-percent"></div>
 
-  <!-- <div class="credits">Made by <u><a href="https://www.andriibabintsev.com/" target="_blank" style="color: #000000; text-decoration: none;">Andrii Babintsev</a></u> | <u><a href="https://github.com/Snokke/crazy-pumpkin" target="_blank" style="color: #000000; text-decoration: none;">Source code</a></u> -->
+  <div class="credits">Made by <u><a href="https://www.andriibabintsev.com/" target="_blank" style="color: #000000; text-decoration: none;">Andrii Babintsev</a></u> | <u><a href="https://github.com/Snokke/crazy-pumpkin" target="_blank" style="color: #000000; text-decoration: none;">Source code</a></u>
 
   <script>
     window.onload = function() { window.focus(); }
