--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=0">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <!-- <meta name="google-signin-client_id" content="291331590559-g1o0cv5vmn15c4b6src0e8a5gugbd2e4.apps.googleusercontent.com"> -->
   <link rel="icon" type="image/png" href="favicon/favicon.ico">
   <title>Crazy Pumpkin</title>
-  <!-- <script src="https://apis.google.com/js/platform.js" async defer></script> -->
   <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 
@@ -23,18 +21,15 @@
         href="https://github.com/Snokke/crazy-pumpkin" target="_blank"
         style="color: #000000; text-decoration: none;">Source code</a></u></div>
 
-
-  <!-- <div class="g-signin2" data-onsuccess="onSignIn"></div> -->
-
   <div id="g_id_onload" data-client_id="291331590559-g1o0cv5vmn15c4b6src0e8a5gugbd2e4.apps.googleusercontent.com" data-callback="handleCredentialResponse">
   </div>
   <div class="g_id_signin" data-type="standard"></div>
-
 
   <script>
     window.onload = function () { window.focus(); }
   </script>
 
+  <script type="module" src="./src/auth.js"></script>
   <script type="module" src="./src/main.js"></script>
 </body>
 
